# subtext-playground

./: .gitignore  .gitmodules  README.md  pyproject.toml
data/neutral_nouns/: 2-syllable.txt  3-syllable.txt  all.txt
outputs/: results_haiku-4.5.jsonl  results_opus-4.5.jsonl  results_qwen-72b.jsonl  results_qwen-7b.jsonl  results_sonnet-4.5.jsonl
outputs/codeword_scan/: prompts.jsonl  summary.csv
outputs/codeword_sort/: contests.jsonl  contests_gemini.jsonl  groups.json  groups_annealed.json  groups_neutral.json  neutral_words.json  strengths.json  strengths_gemini.json  summary.txt  validation.json  validation_annealed.json  validation_neutral.json
outputs/noun_scan/: prompts.jsonl  summary.csv
outputs/noun_scan_v1_full/: per_codeword_deltas.csv  prompts.jsonl  summary.csv
outputs/noun_scan_v2/: prompts.jsonl  summary.csv
outputs/noun_scan_v3/: prompts.jsonl  summary.csv
reports/: example_system_prompts.md  noun_scan_v1_full_methods.md  v1_full_investigation.md  v1_full_per_codeword_deltas.md  v1_full_top_prompts.md  v1_full_transcript.md  v5_control_parse_failures.md
scripts/: analyze_flash_lite.py  analyze_phoenix.py  analyze_results.py  export_per_codeword_deltas.py  monitor_and_analyze.sh  run_codeword_anneal.py  run_codeword_profile.py  run_codeword_scan.py  run_codeword_sort.py  run_eval_only.py  run_experiment.py  run_missing_evals.py  run_noun_scan.py  run_noun_scan_v1_full.py  run_noun_scan_v2.py  run_noun_scan_v3.py  run_noun_scan_v4.py  run_noun_scan_v5_full.py  run_sentinel_scan.py  test_reasoning_settings.py  test_single_trial.py
(+72 files in other folders)
